--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -29,6 +29,6 @@ jobs:
           pip install -r requirements.txt
       - name: Check migration
         run: |
-          python src/manage.py makemigrations
-          python src/manage.py migrate
-          python src/manage.py check
+          python backend/user_management/manage.py makemigrations
+          python backend/user_management/manage.py migrate
+          python backend/user_management/manage.py check
