--- a/backend/user_management/requirements.txt
+++ b/backend/user_management/requirements.txt
@@ -5,6 +5,7 @@ Django==3.2.14
 django-cors-headers==3.13.0
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
+django-utils-six==2.0
 gunicorn==20.1.0
 install==1.3.5
 mccabe==0.6.1
