--- a/backend/user_management/requirements.txt
+++ b/backend/user_management/requirements.txt
@@ -6,6 +6,7 @@ django-cors-headers==3.13.0
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
 django-utils-six==2.0
+Faker==13.15.0
 gunicorn==20.1.0
 install==1.3.5
 mccabe==0.6.1
@@ -16,6 +17,7 @@ psycopg2==2.9.3
 pycodestyle==2.8.0
 pyflakes==2.4.0
 PyJWT==2.4.0
+python-dotenv==0.20.0
 pytz==2022.1
 sqlparse==0.4.2
 tomli==2.0.1
